# odd-clickhouse-adapter

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflow/: build_and_push.yaml
.github/workflows/: build_and_push.yaml
docker/: .env  docker-compose.yml
odd_clickhouse_adapter/: adapter.py  cache.py  config.py  controller.py  scheduler.py  wsgi.py
odd_clickhouse_adapter/mappers/: __init__.py  columns.py  metadata.py  tables.py  types.py
server/: config.py  wsgi.py
server/adapter/: __init__.py  adapter.py  column.py  metadata.py  table.py  type.py
server/app/: abstract_adapter.py  cache.py  controller.py  oddrn.py  scheduler.py
