[tool.poetry]
name = "odd-clickhouse-adapter"
version = "0.1.0"
description = ""
authors = ["Ruslan Ibragimov <ribragimov@provectus.com>"]

[[tool.poetry.source]]
name = "main"
url = "https://test.pypi.org/simple/"
secondary = true

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
gunicorn = "^20.1.0"
clickhouse-driver = "^0.2.1"
odd-contract-dev = "^1.0.3"
APScheduler = "^3.7.0"
psycopg2-binary = "^2.9.1"
oddrn-generator = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
