[tool.poetry]
name = "odd-clickhouse-adapter"
version = "0.1.1"
description = ""
authors = ["Ruslan Ibragimov <ribragimov@provectus.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
gunicorn = "^20.1.0"
clickhouse-driver = "^0.2.1"
APScheduler = "^3.7.0"
psycopg2-binary = "^2.9.1"
oddrn-generator = "^0.1.3"
odd-models = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
